AsciidocProvider should only initialize once