@@ -122,6 +122,17 @@
                </archive>
             </configuration>
          </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=160m</argLine>
+              <systemProperties>
+                 <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+              </systemProperties>
+            </configuration>
+         </plugin>
+
       </plugins>
    </build>
 
